# esp32

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  python_test_api.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  WeatherIcon.c  WeatherIcon.h  WeatherIcon1b.c  custom_font.h  custom_image.h  decode_image.c  decode_image.h  hmi_app.c  hmi_app.h  idf_component.yml  index.html  lcd_lv_init.c  lcd_lv_init.h  lv_custom_ui.c  lv_custom_ui.h  main.c  parse_json.c  parse_json.h  spi_master_example_main.c  weather_icon.c  weather_icon.h  wifi_app.c  wifi_app.h  wifi_init.c  wifi_init.h
main/assets/: WuKong.c  bridge.c  cat.c  fuji.c  hero.c  k1.c  kw_bg.c  lukiya.c  missaka.c  roxy.c
main/fonts/: MoreIcon4b.c  WeatherIcon4b.c  WeatherIcon8b.c  WenQuanWeiMiHei_12.c  WenQuanWeiMiHei_18.c  WenQuanWeiMiHei_24.c  WenQuanWeiMiHei_36.c
